2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix shared size test: add missing comma, do
	not use debugging.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/instrument-notation.itely (String number
	indications): new node.

	* input/regression/new-markup-syntax.ly (texidoc): add circle.

	* lily/new-fingering-engraver.cc (add_string): new function. 
	(acknowledge_grob): accept string-number-event as well.

	* scm/define-markup-commands.scm (circle): new markup command.

	* scm/output-lib.scm (print-circled-text-callback): new function.

	* lily/GNUmakefile: move ifeq after include stepmake.make.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.make.in (HAVE_LIBKPATHSEA_SO):
	* stepmake/aclocal.m4: Also subst HAVE_LIBKPATHSEA_SO.

	* lily/GNUmakefile (MODULE_LDFLAGS): Only if not HAVE_KPATHSEA_SO,
	add KPATHSEA_LIBS.

	* debian/watch: 
	* debian/control: Update.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/test/title-markup.ly (spaceTest): remove.

	* input/test/embedded-tex.ly (Module): remove.

	* input/test/music-box.ly: use 'name property, not ly:music-name.

	* lily/GNUmakefile (MODULE_LDFLAGS): add KPATHSEA_LIBS.

	* stepmake/aclocal.m4: STEPMAKE_FONTCONFIG: add.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi (Top): Remove information
	about xdeltas.  Add information about CVS.

	* scm/lily.scm (lilypond-main): Fix invocation of handler,
	gracefully handle failed files.

	* lily/GNUmakefile (MODULE_LDFLAGS): Remove KPATHSEA_LIBS.

	* Documentation/topdocs/INSTALL.texi (Top): Whitespace and other
	small fixes.

	* scm/framework-tex.scm (convert-to-ps): Proper option spacing.
	No unnecessarily specific i18n messages.  Remove stray `1'.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/lys-to-tely.py (strip_extension): add utf-8
	documentencoding

	* scm/documentation-lib.scm (texi-file-head): set utf-8
	documentencoding.
