@@ -82,6 +82,9 @@
 /* define if you have pango 1.6 */
 #define HAVE_PANGO16 0
 
+/* define if you have fontconfig */
+#define HAVE_FONTCONFIG 0
+
 /* define if you have pango FT2 binding */
 #define HAVE_PANGO_FT2 0
 
