@@ -5,6 +5,10 @@
 
 2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* GNUmakefile.in (local-WWW-post): remove UTF8 .htaccess.
+
+	* config.hh.in: add HAVE_FONTCONFIG.
+
 	* Documentation/user/instrument-notation.itely (String number
 	indications): new node.
 
